apps/n8n/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /n8n
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
